chore(app|routes): add error handling functions
- create a 404 error generator if the route is not found.
- create a custom error handler that returns json.
- add validation to the vote up/down route.

[Delivers #errorHandling]

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stackoverflowLite",
+  "name": "stackoverflow-lite",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
